Nov 20, 2003

  * ENHANCED: Tools/Add missing labels: better cleaning of label names,
    capitalise class-names (but not the name of other resources).

Nov 18, 2003

  * ADDED: Protected files and directing new triples to specified files.
    Requires SWI-Prolog 5.2.10 from the BETA download.

Nov 14, 2003

  * ADDED: link to wiki web from help menu (suggested by Mark)